@@ -472,7 +472,7 @@ sed 's/\\/\\\\/g;s/"/\\"/g' -- "$@@" | awk -F'\t' '
 @end group
 @end example
 
-The @code{-t} option causes the @command{datalog} program to print
+The @samp{-t} option causes the @command{datalog} program to print
 answers to queries as tab separated values.  The following script
 removes quoting introduced by @command{datalog}.
 
@@ -510,6 +510,11 @@ query to the Datalog program, and the last @command{sed} command
 converts the output to colon separated values.  On my machine, the
 above script produces @code{ramsdell:/home/ramsdell}.
 
+Notice that input to @command{datalog} is obtained from @command{sed}
+using the @samp{-} option rather than implicitly via standard input.
+Using the @samp{-} option avoids prompt printing and other features of
+the interactive loop.
+
 @node    Extensions, Library, Import/Export, Top
 @chapter Extensions
 
@@ -523,7 +528,7 @@ language is a gem.  Knowledge of Lua is a prerequisite for what
 follows.
 
 The mechanics of adding primitives is straightforward.  Put your
-extensions in a file and load it using the @code{-l} option.
+extensions in a file and load it using the @samp{-l} option.
 The more difficult part is to decide what code should be
 loaded.
 
@@ -591,6 +596,54 @@ datalog.add_iter_prim("add", 3, add)
 @end group
 @end example
 
+The above primitive fails when given a non-numeric argument.  A more
+robust implementation of the predicate ensures that arguments are
+numbers before performing arithmetic.
+
+@example
+@group
+local function add(literal)
+   return function(s, v)
+             if v then
+                return nil
+             else
+                local x = literal[1]
+                local y = literal[2]
+                local z = literal[3]
+                if y:is_const() and z:is_const() then
+                   local j = tonumber(y.id)
+                   local k = tonumber(z.id)
+                   if j and k then
+                      return @{j + k, j, k@}
+                   else
+                      return nil
+                   end
+                elseif x:is_const() and z:is_const() then
+                   local i = tonumber(y.id)
+                   local k = tonumber(z.id)
+                   if i and k then
+                      return @{i, i - k, k@}
+                   else
+                      return nil
+                   end
+                   return @{x.id, x.id - z.id, z.id@}
+                elseif x:is_const() and y:is_const() then
+                   local i = tonumber(x.id)
+                   local j = tonumber(y.id)
+                   if i and j then
+                      return @{i, j, i - j@}
+                   else
+                      return nil
+                   end
+                   return @{x.id, y.id, x.id - y.id@}
+                else
+                   return nil
+                end
+             end
+          end
+end
+@end group
+@end example
 @node    Library, Copying, Extensions, Top
 @chapter Library
 
